--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -9,4 +9,25 @@
   .form-input {
     @apply block shadow rounded-md border border-gray-200 outline-none px-3 py-2 mt-2 w-full;
   }
+  .btn {
+    @apply rounded-lg w-full py-3 px-5 inline-block font-medium cursor-pointer;
+  }
+  .btn.btn-primary {
+    @apply bg-blue-500 text-white hover:bg-blue-500/80;
+  }
+  .color-1 {
+    @apply bg-blue-500;
+  }
+  .color-2 {
+    @apply bg-green-500;
+  }
+  .color-3 {
+    @apply bg-red-500;
+  }
+  .color-4 {
+    @apply bg-yellow-500;
+  }
+  .color-5 {
+    @apply bg-slate-500;
+  }
 }
