--- a/app/views/articles/_preview.html.erb
+++ b/app/views/articles/_preview.html.erb
@@ -1,6 +1,6 @@
-<div class="bg-gray-200 p-4 shadow-sm rounded-sm">
-  <article class="prose">
-    <h2 class="text-2xl font-bold" data-article-target="titlePreview"><%= article.title %></h2>
+<div class="p-4 border-slate-800/60 border rounded-lg overflow-auto h-[500px]">
+  <article class="prose container ">
+    <h1  data-article-target="titlePreview"><%= article.title %></h1>
     <div data-article-target="bodyPreview">
       <%= article.body %>
     </div>
