--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,5 +1,10 @@
-<h1>Articles</h1>
-<p>Find me in app/views/articles/index.html.erb</p>
+<ul>
+  <% @articles.each do |article| %>
+    <li>
+      <%= link_to article.title, article %>
+    </li>
+  <% end %>
+</ul>
 
 <% if user_signed_in? %>
   <%= link_to new_article_path do %>
